fix(Mote): remove horizontal scrollbars

--- a/scss/components/_mote.scss
+++ b/scss/components/_mote.scss
@@ -322,6 +322,7 @@
 	display: inline-block;
 	fill: currentColor;
 	margin-right: 1rem;
+	overflow: visible;
 
 	#eyes,
 	#left,
